<resources>
    <string name="app_name">iList</string>
    <string name="activity_item">Novo item</string>

    <!-- list_item.xml -->
    <string name="txt_status">Status do item</string>
    <string name="txt_nome">Item a ser comprado</string>

    <!-- activity_home_drawer.xml -->
    <string name="nav_az">A-Z</string>
    <string name="nav_za">Z-A</string>
    <string name="nav_add">Novo Item</string>
    <string name="nav_comprar">À comprar</string>
    <string name="nav_comprado">Comprado</string>
    <string name="nav_report">Relatórios</string>

    <!-- activity_item.xml -->
    <string name="et_nome">Nome do produto</string>
    <string name="et_quantidade">Quantidade</string>
    <string name="btn_orcamento">Novo orçamento</string>
    <string name="spinner_unidade">Escolha uma unidade</string>

    <!-- activity_report.xml -->
    <string name="label_exceco">Em exceço</string>
    <string name="label_comprados">Comprados</string>
    <string name="label_parcialmente">À comprar</string>
    <string name="label_resumo">Resumo dos itens</string>
    <string name="label_titulo">Relatório de compra</string>

    <!-- menu_toolbar.xml -->
    <string name="menu_check">Gravar</string>
    <string name="menu_delete">Apagar</string>

    <!-- list_orcamento.xml -->
    <string name="txt_preco">R$ 0,00</string>
    <string name="txt_quantidade">000</string>
    <string name="txt_descricao">Descrição breve</string>

    <!-- dialog_orcamento.xml -->
    <string name="et_observacao">Observações</string>
    <string name="et_preco">Preço do orçamento</string>
    <string name="et_estabelecimento">Descrição do estabelecimento</string>

    <!-- menu_bottom_sheet.xml -->
    <string name="btm_buy">Comprar</string>
    <string name="btm_edit">Editar</string>
    <string name="btm_insert">Novo item</string>
    <string name="btm_delete">Apagar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
