<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="16dp"
    android:orientation="vertical"
    android:id="@+id/activity_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="ilist.gabrielrunescape.com.br.view.ItemActivity">

    <EditText
        android:ems="10"
        android:id="@+id/et_nome"
        android:hint="@string/et_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_weight="0.3"
            android:id="@+id/et_quantidade"
            android:inputType="numberSigned"
            android:layout_width="wrap_content"
            android:hint="@string/et_quantidade"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_weight="0.7"
            android:layout_gravity="center"
            android:id="@+id/spinner_unidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_unidade" />

    </LinearLayout>

    <Button
        android:text="@string/btn_orcamento"
        android:id="@+id/btn_orcamento"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_orcamento" />

</LinearLayout>
