<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <EditText
        android:id="@+id/et_estabelecimento"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_estabelecimento" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:ems="10"
            android:layout_weight="1"
            android:id="@+id/et_quantidade"
            android:inputType="numberSigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_quantidade" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/et_preco"
            android:hint="@string/et_preco"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <EditText
        android:gravity="top"
        android:id="@+id/et_observacao"
        android:layout_height="100dp"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:hint="@string/et_observacao" />

    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/txt_total"
        android:layout_marginTop="8dp"
        android:textAlignment="textEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>