<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:weightSum="1"
    android:layout_height="48dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?android:attr/selectableItemBackground">

    <TextView
        android:textSize="18sp"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:id="@+id/txt_quantidade"
        android:layout_height="wrap_content"
        android:text="@string/txt_quantidade"
        android:layout_weight="@dimen/txt_quantidade" />

    <TextView
        android:layout_width="0dp"
        android:id="@+id/txt_descricao"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/txt_descricao"
        android:layout_weight="@dimen/txt_descricao" />

    <TextView
        android:gravity="end"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:id="@+id/txt_preco"
        android:layout_gravity="center"
        android:text="@string/txt_preco"
        android:layout_height="wrap_content"
        android:layout_weight="@dimen/txt_preco" />
</LinearLayout>